--- a/requirements_pretrainer.txt
+++ b/requirements_pretrainer.txt
@@ -1,7 +1,19 @@
-wikiextractor==3.0.6 # Or latest compatible
+# Comment out or remove the old wikiextractor
+# wikiextractor==3.0.6
+
+# Add the line to install WikiExtractor V2 from its Git repository
+# YOU MUST REPLACE 'https://github.com/someuser/WikiExtractorV2.git' WITH THE ACTUAL URL OF THE FORK
+git+https://github.com/langtech-bsc/Wikiextractor-V2.git
+# Common forks often still register under the name 'wikiextractor' for compatibility.
+# If the fork uses a different package name (e.g., 'wikiextractorv2'), adjust #egg= accordingly.
+
 sentence-transformers>=2.2.0
-bertopic[visualization]>=0.15.0 # [visualization] is optional but useful for inspecting topics
+bertopic[visualization]>=0.15.0
 pandas>=1.3.0
 loguru>=0.7.0
-# torch (usually installed as a dependency)
-# tqdm (often used by these libraries for progress bars)
+requests # For wikipedia_downloader.py
+
+# For CPU-only PyTorch
+torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
+# torchvision --index-url https://download.pytorch.org/whl/cpu
+# torchaudio --index-url https://download.pytorch.org/whl/cpu
