--- a/requirements_pretrainer.txt
+++ b/requirements_pretrainer.txt
@@ -13,3 +13,7 @@ requests # For wikipedia_downloader.py
 torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
 # torchvision --index-url https://download.pytorch.org/whl/cpu
 # torchaudio --index-url https://download.pytorch.org/whl/cpu
+
+# Dependencies from WikiExtractorV2 fork
+babel==2.12.1
+pylatexenc==2.10
