--- a/requirements_pretrainer.txt
+++ b/requirements_pretrainer.txt
@@ -1,8 +1,4 @@
-# FILE: requirements_pretrainer.txt
-# In requirements_pretrainer.txt (on your local machine)
-# Comment out or remove both wikiextractor lines:
-# wikiextractor==3.0.6
-# git+https://github.com/langtech-bsc/Wikiextractor-V2.git#egg=wikiextractor 
+# In C:\Users\ayoub\Desktop\minbar_services\topic_model_pretrainer\requirements_pretrainer.txt
 
 sentence-transformers>=2.2.0
 bertopic[visualization]>=0.15.0
@@ -10,11 +6,10 @@ pandas>=1.3.0
 loguru>=0.7.0
 requests # For wikipedia_downloader.py
 
+# Dependencies from WikiExtractorV2 fork
+Babel>=2.9.0  # Or whatever version its reqs.txt has
+pylatexenc>=2.10 # Or whatever version its reqs.txt has
+beautifulsoup4>=4.9.0 # ADDED - check fork's reqs.txt for version
+
 # For CPU-only PyTorch
 torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
-# torchvision --index-url https://download.pytorch.org/whl/cpu
-# torchaudio --index-url https://download.pytorch.org/whl/cpu
-
-# Dependencies from WikiExtractorV2 fork
-babel==2.12.1
-pylatexenc==2.10
