--- a/requirements_pretrainer.txt
+++ b/requirements_pretrainer.txt
@@ -1,23 +1,20 @@
-# Pinned versions for reproducibility and compatibility with nlp_analyzer_service
-sentence-transformers==2.7.0  # <<< EXAMPLE - CHOOSE YOUR VERSION AND PIN
-bertopic==0.16.0              # <<< EXAMPLE - CHOOSE YOUR VERSION AND PIN
-scikit-learn==1.3.2           # <<< EXAMPLE - CHOOSE YOUR VERSION AND PIN
-pandas==2.0.3                 # <<< EXAMPLE - CHOOSE YOUR VERSION AND PIN
-numpy==1.26.0                 # <<< EXAMPLE - CHOOSE YOUR VERSION AND PIN
-umap-learn==0.5.5             # <<< EXAMPLE - CHOOSE YOUR VERSION AND PIN
-hdbscan==0.8.33               # <<< EXAMPLE - CHOOSE YOUR VERSION AND PIN
-# Ensure joblib version is also compatible if used, though default pickle is less sensitive
-# joblib==1.3.2
+# Consistent pinned versions for model training and inference
+sentence-transformers==2.7.0
+bertopic==0.16.0
+scikit-learn==1.3.2
+pandas==2.0.3
+numpy==1.26.0
+umap-learn==0.5.5
+hdbscan==0.8.33
+joblib==1.3.2
 
-loguru>=0.7.0
-requests
-gensim>=4.0.0 
+loguru==0.7.2  # Pinning this too for consistency
+requests==2.31.0 # Pinning this too
+gensim==4.3.2    # Pinning this too
 
-# For CPU-only PyTorch
-torch==2.1.2 --index-url https://download.pytorch.org/whl/cpu # <<< EXAMPLE - CHOOSE YOUR VERSION AND PIN
+torch==2.1.2 --index-url https://download.pytorch.org/whl/cpu
 
-# Dependencies that might have been installed for the nlp_analyzer_service
-# and could be relevant for consistency if bertopic depends on them,
-# or if the pretrainer uses them (even if not explicitly in its old reqs)
-# protobuf>=3.20.0
-# sentencepiece>=0.1.98
+# Added for consistency with analyzer, even if not directly used by pretrainer
+protobuf==4.25.1
+sentencepiece==0.1.99
+transformers==4.35.2 # Add this as sentence-transformers may rely on a compatible version
