--- a/requirements_pretrainer.txt
+++ b/requirements_pretrainer.txt
@@ -1,32 +1,28 @@
 # topic_model_pretrainer/requirements_pretrainer.txt
 
 # --- Core ML/NLP Stack - Pin these versions carefully for reproducibility ---
-# These versions should ideally be determined from a known working environment
-# or chosen as recent, stable, and compatible versions.
-# These exact versions will need to be mirrored in your nlp_analyzer_service/requirements.txt
-
-numpy==1.26.0                 # Pin numpy first
-scipy==1.11.4                 # Known to be compatible with numpy 1.26 and recent gensim/sklearn
+numpy==1.26.0
+scipy==1.11.4
 pandas==2.0.3
-scikit-learn==1.3.2           # Core for BERTopic
-joblib==1.3.2                 # Often used by scikit-learn components
+scikit-learn==1.3.2
+joblib==1.3.2
 
 umap-learn==0.5.5
-hdbscan==0.8.33               # Includes Cython, needs build tools
+hdbscan==0.8.33
 
-sentence-transformers==2.7.0  # For embeddings
-torch==2.1.2 --index-url https://download.pytorch.org/whl/cpu # PyTorch for sentence-transformers
+sentence-transformers==2.7.0
+torch==2.1.2 --index-url https://download.pytorch.org/whl/cpu
 
-bertopic==0.16.0              # BERTopic itself
+bertopic==0.16.0 # Ensure this version supports the representation model well if you use BERTopic's built-in LLM support later
 
 # --- Other Dependencies for Pretrainer ---
 loguru==0.7.2
 requests==2.31.0
-gensim==4.3.2                 # For Wikipedia parsing
+gensim==4.3.2
 
-# --- Dependencies for broader compatibility & Hugging Face ecosystem ---
-# Add these to ensure the environment is as close as possible to the nlp_analyzer_service
-# even if not directly used by all pretrainer components, sentence-transformers might touch them.
-transformers==4.35.2          # Hugging Face transformers library
+# --- Dependencies for LLM (Gemini) & Hugging Face ecosystem ---
+transformers==4.35.2
 protobuf==4.25.1
 sentencepiece==0.1.99
+google-generativeai>=0.5.0 # For Gemini
+retry>=0.9.2                # For robust API calls
